Finally found a CSS fix for the last pict spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,3 +36,7 @@ html, body {
     padding-right: 20px;
   }
 }
+
+.media, .media .media {
+  margin-bottom: 15px;
+}
